# boolean-expression

./: BooleanExpression.cxx  BooleanExpression.h  Makefile.am  README.md  TruthProduct.cxx  TruthProduct.h  configure.m4
